- `10.0.0-Preview4.1`   - `Themes`.     - `ThemeSwitch`. Added 'Windows' check for system theme.

--- a/src/FluentUI/Marqdouj.DotNet.Web.Components.FluentUI/Themes/ThemeSwitch.razor
+++ b/src/FluentUI/Marqdouj.DotNet.Web.Components.FluentUI/Themes/ThemeSwitch.razor
@@ -35,8 +35,8 @@
                 Mode = Mode == DesignThemeModes.Dark ? DesignThemeModes.Light : DesignThemeModes.Dark;
                 break;
             default:
-                //Assume Light is the browser/system default, but it could be either.
-                Mode = DesignThemeModes.Dark;
+                var isDark = ThemeDetector.IsDarkModeEnabled();
+                Mode = isDark ? DesignThemeModes.Light : DesignThemeModes.Dark;
                 break;
         }
     }
