- `10.0.0-Preview6.0` (Breaking Changes)   - `Themes`.     - `ThemeToggle`.       - Renamed `ThemeSwitch` to `ThemeToggle`. The name better       represents what the control actually does.       - Previous Parameters now part of 'Settings`.   - `XMLComments`. Comments are now distributed with the package.

--- a/src/FluentUI/Marqdouj.DotNet.Web.Components.FluentUI/_Imports.razor
+++ b/src/FluentUI/Marqdouj.DotNet.Web.Components.FluentUI/_Imports.razor
@@ -3,3 +3,4 @@
 @using Icons = Microsoft.FluentUI.AspNetCore.Components.Icons
 @using Marqdouj.DotNet.Web.Components.Css
 @using Marqdouj.DotNet.Web.Components.UI
+@using Marqdouj.DotNet.Web.Components.FluentUI.Common
