Update xml comments

--- a/src/FluentUI/Marqdouj.DotNet.Web.Components.FluentUI/Themes/ThemeToggle.razor
+++ b/src/FluentUI/Marqdouj.DotNet.Web.Components.FluentUI/Themes/ThemeToggle.razor
@@ -20,9 +20,9 @@
 
     /// <summary>
     /// Flag to include the FluentDesignTheme component. Default is 'true'.<br />
-    /// If false, then the FluentDesignTheme component must be present elsewhere,<br />
-    /// the ThemeSettings must provided and be bound to the other component,<br />
-    /// and you must set the ThemeSettings.StateChanged action and call StateHasChanged().<br />
+    /// If false, then the FluentDesignTheme component must be present elsewhere.<br />
+    /// The ThemeSettings must be provided, bound to the other component,<br />
+    /// and the ThemeSettings.StateChanged action set with StateHasChanged().<br />
     /// <example>
     /// Configure ThemeSettings for StateChanged.<br />
     /// <code>
