- `10.0.0-Preview7.1`   - `Themes`.     - `ThemeSelect`. Added missing check for FluentDesignTheme flag.

--- a/src/FluentUI/Marqdouj.DotNet.Web.Components.FluentUI/Themes/ThemeSelect.razor
+++ b/src/FluentUI/Marqdouj.DotNet.Web.Components.FluentUI/Themes/ThemeSelect.razor
@@ -1,9 +1,13 @@
-﻿@using Microsoft.FluentUI.AspNetCore.Components.Extensions
-<FluentDesignTheme @bind-Mode="@themeSettings.Mode"
-                   @bind-OfficeColor="@themeSettings.OfficeColor"
-                   OnLoaded="@OnLoaded"
-                   OnLuminanceChanged="@OnLuminanceChanged"
-                   StorageName="@themeSettings.StorageName" />
+﻿@{
+    if (FluentDesignTheme)
+    {
+        <FluentDesignTheme @bind-Mode="@themeSettings.Mode"
+                           @bind-OfficeColor="@themeSettings.OfficeColor"
+                           OnLoaded="@OnLoaded"
+                           OnLuminanceChanged="@OnLuminanceChanged"
+                           StorageName="@themeSettings.StorageName" />
+    }
+}
 
 @{
     switch (Alignment)
