--- a/src/FluentUI/Marqdouj.DotNet.Web.Components.FluentUI/UIInput/UISelect.razor
+++ b/src/FluentUI/Marqdouj.DotNet.Web.Components.FluentUI/UIInput/UISelect.razor
@@ -46,7 +46,7 @@
     [Parameter]
     public bool ReadOnly { get; set; }
 
-    /// <summy>
+    /// <summary>
     /// <see cref="ListComponentBase{TOption}.Width"/>
     /// </summary>
     [Parameter]
