--- a/src/FluentUI/Marqdouj.DotNet.Web.Components.FluentUI/_Imports.razor
+++ b/src/FluentUI/Marqdouj.DotNet.Web.Components.FluentUI/_Imports.razor
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.FluentUI.AspNetCore.Components
 @using Icons = Microsoft.FluentUI.AspNetCore.Components.Icons
+@using Microsoft.FluentUI.AspNetCore.Components.Extensions
 @using Marqdouj.DotNet.Web.Components.Css
 @using Marqdouj.DotNet.Web.Components.UI
 @using Marqdouj.DotNet.Web.Components.FluentUI.Common
